--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,34 @@
-<p>form works!</p>
+<div class="container-fluid">
+    <div class="form-sect">
+      <form (ngSubmit)="submitGoal()" #quotesForm="ngForm">
+        <h2>Add Quote</h2>
+        <div class="form-group">
+          <label for="submitter">Name</label>
+          <input type="text" class="form-control quote-input" id="name" [(ngModel)]="newQuote.submitter" name="submitter"
+            #submitter='ngModel' required>
+          <div [hidden]="submitter.valid || submitter.pristine" class="alert alert-danger">
+            <p>Name is required</p>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="description">Quote</label>
+          <textarea class="form-control quote-input" id="description" rows="4" [(ngModel)]="newQuote.description"
+            name="description" #description="ngModel" required></textarea>
+          <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+            <p>Quote is required</p>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="author">Author</label>
+          <input type="text" id="author" class="form-control quote-input" [(ngModel)]="newQuote.author" name="author"
+            #author="ngModel" required>
+          <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+            <p>Author is required</p>
+          </div>
+        </div>
+        <div>
+          <button class="form-button">Add Quote</button>
+        </div>
+      </form>
+    </div>
+  </div>
